backend/k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /api/admin
        pathType: Prefix     
        backend:
          service:
            name: admin-service
            port:
              number: 8080
      - path: /api/game
        pathType: Prefix     
        backend:
          service:
            name: game-service
            port:
              number: 8081
      - path: /api/brand
        pathType: Prefix
        backend:
          service:
            name: brand-service
            port:
              number: 8080
